[gd_scene load_steps=70 format=2]

[ext_resource path="res://assets/main/Walk (2).png" type="Texture" id=1]
[ext_resource path="res://assets/main/Walk (9).png" type="Texture" id=2]
[ext_resource path="res://assets/main/Walk (5).png" type="Texture" id=3]
[ext_resource path="res://assets/main/Walk (4).png" type="Texture" id=4]
[ext_resource path="res://assets/main/Walk (10).png" type="Texture" id=5]
[ext_resource path="res://assets/main/Run (1).png" type="Texture" id=6]
[ext_resource path="res://assets/main/Walk (8).png" type="Texture" id=7]
[ext_resource path="res://assets/main/Walk (6).png" type="Texture" id=8]
[ext_resource path="res://assets/main/Run (3).png" type="Texture" id=9]
[ext_resource path="res://assets/main/Run (8).png" type="Texture" id=10]
[ext_resource path="res://assets/main/Run (7).png" type="Texture" id=11]
[ext_resource path="res://assets/main/Walk (1).png" type="Texture" id=12]
[ext_resource path="res://assets/main/Walk (3).png" type="Texture" id=13]
[ext_resource path="res://assets/main/Walk (7).png" type="Texture" id=14]
[ext_resource path="res://assets/main/Run (5).png" type="Texture" id=15]
[ext_resource path="res://assets/main/Run (6).png" type="Texture" id=16]
[ext_resource path="res://assets/main/Run (2).png" type="Texture" id=17]
[ext_resource path="res://assets/main/Run (4).png" type="Texture" id=18]
[ext_resource path="res://assets/main/Idle (7).png" type="Texture" id=19]
[ext_resource path="res://assets/main/Idle (8).png" type="Texture" id=20]
[ext_resource path="res://assets/main/Idle (10).png" type="Texture" id=21]
[ext_resource path="res://assets/main/Idle (5).png" type="Texture" id=22]
[ext_resource path="res://assets/main/Idle (9).png" type="Texture" id=23]
[ext_resource path="res://assets/main/Idle (6).png" type="Texture" id=24]
[ext_resource path="res://assets/main/Idle (2).png" type="Texture" id=25]
[ext_resource path="res://assets/main/Idle (3).png" type="Texture" id=26]
[ext_resource path="res://assets/main/Idle (4).png" type="Texture" id=27]
[ext_resource path="res://assets/main/Idle (1).png" type="Texture" id=28]
[ext_resource path="res://assets/main/Jump (8).png" type="Texture" id=29]
[ext_resource path="res://assets/main/Jump (10).png" type="Texture" id=30]
[ext_resource path="res://assets/main/Jump (4).png" type="Texture" id=31]
[ext_resource path="res://assets/main/Jump (3).png" type="Texture" id=32]
[ext_resource path="res://assets/main/Jump (9).png" type="Texture" id=33]
[ext_resource path="res://assets/main/Slide (9).png" type="Texture" id=34]
[ext_resource path="res://assets/main/Slide (7).png" type="Texture" id=35]
[ext_resource path="res://assets/main/Slide (4).png" type="Texture" id=36]
[ext_resource path="res://assets/main/Jump (5).png" type="Texture" id=37]
[ext_resource path="res://assets/main/Slide (10).png" type="Texture" id=38]
[ext_resource path="res://assets/main/Jump (1).png" type="Texture" id=39]
[ext_resource path="res://assets/main/Slide (1).png" type="Texture" id=40]
[ext_resource path="res://assets/main/Slide (2).png" type="Texture" id=41]
[ext_resource path="res://assets/main/Slide (5).png" type="Texture" id=42]
[ext_resource path="res://assets/main/Slide (6).png" type="Texture" id=43]
[ext_resource path="res://assets/main/Jump (6).png" type="Texture" id=44]
[ext_resource path="res://assets/main/Jump (7).png" type="Texture" id=45]
[ext_resource path="res://assets/main/Jump (2).png" type="Texture" id=46]
[ext_resource path="res://assets/main/Slide (3).png" type="Texture" id=47]
[ext_resource path="res://assets/main/Slide (8).png" type="Texture" id=48]
[ext_resource path="res://assets/main/Dead (5).png" type="Texture" id=49]
[ext_resource path="res://assets/main/Dead (4).png" type="Texture" id=50]
[ext_resource path="res://assets/main/Dead (2).png" type="Texture" id=51]
[ext_resource path="res://assets/main/Dead (6).png" type="Texture" id=52]
[ext_resource path="res://assets/main/Dead (1).png" type="Texture" id=53]
[ext_resource path="res://assets/main/Dead (7).png" type="Texture" id=54]
[ext_resource path="res://assets/main/Dead (9).png" type="Texture" id=55]
[ext_resource path="res://assets/main/Dead (8).png" type="Texture" id=56]
[ext_resource path="res://assets/main/Dead (10).png" type="Texture" id=57]
[ext_resource path="res://assets/main/Dead (3).png" type="Texture" id=58]
[ext_resource path="res://src/actors/mc.gd" type="Script" id=59]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 40.1673, 83.5892 )

[sub_resource type="CapsuleShape2D" id=11]
radius = 35.4326
height = 55.1344

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 31, 10 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 31.9853, 10.1604 )

[sub_resource type="Animation" id=13]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 53 ), ExtResource( 51 ), ExtResource( 58 ), ExtResource( 50 ), ExtResource( 49 ), ExtResource( 52 ), ExtResource( 54 ), ExtResource( 56 ), ExtResource( 55 ), ExtResource( 57 ) ]
}

[sub_resource type="Animation" id=14]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 28 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 22 ), ExtResource( 24 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 23 ), ExtResource( 21 ) ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 39 ), ExtResource( 46 ), ExtResource( 32 ), ExtResource( 31 ), ExtResource( 37 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 29 ), ExtResource( 33 ), ExtResource( 30 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 6 ), ExtResource( 17 ), ExtResource( 9 ), ExtResource( 18 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 11 ), ExtResource( 10 ) ]
}

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 40 ), ExtResource( 41 ), ExtResource( 47 ), ExtResource( 36 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 35 ), ExtResource( 48 ), ExtResource( 34 ), ExtResource( 38 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("body-collision:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -6.35678, 2.05948 ), Vector2( -6.357, 8 ), Vector2( -6.357, 8 ), Vector2( -6.35678, 2.05948 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("body-collision:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.75 ), Vector2( 1, 0.75 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("vulnurable-spot/vulnurable-collision:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.75 ), Vector2( 1, 0.75 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 12 ), ExtResource( 1 ), ExtResource( 13 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 14 ), ExtResource( 7 ), ExtResource( 2 ), ExtResource( 5 ) ]
}

[node name="mc" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 59 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 28 )

[node name="body-collision" type="CollisionShape2D" parent="."]
position = Vector2( -18.8435, 4.4379 )
shape = SubResource( 10 )

[node name="vulnurable-spot" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="vulnurable-collision" type="CollisionShape2D" parent="vulnurable-spot"]
position = Vector2( -17.4326, 4.42439 )
shape = SubResource( 11 )

[node name="stomper" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="stomper-collision" type="CollisionShape2D" parent="stomper"]
position = Vector2( -18.5, 78 )
shape = SubResource( 15 )

[node name="stomper2" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="stomper-collision" type="CollisionShape2D" parent="stomper2"]
position = Vector2( -18.4853, 77.1604 )
shape = SubResource( 12 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_right = 2500
limit_bottom = 1000
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 4.0
editor_draw_limits = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/dead = SubResource( 13 )
anims/idle = SubResource( 14 )
anims/jump = SubResource( 6 )
anims/run = SubResource( 7 )
anims/slide = SubResource( 8 )
anims/walk = SubResource( 9 )
[connection signal="area_shape_entered" from="vulnurable-spot" to="." method="_on_vulnurablespot_area_shape_entered"]
[connection signal="area_shape_entered" from="stomper" to="." method="_on_stomper_area_shape_entered"]
